<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.PostActivity">

    <com.example.lance.threadtest.view.ActionbarView
        android:id="@+id/actionbar_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tv_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/actionbar_view"
        android:layout_margin="20dp"
        android:text="hello word" />

    <Button
        android:id="@+id/bt_post"
        style="@style/Button"
        android:layout_alignParentBottom="true"
        android:text="@string/post" />

    <Button
        android:id="@+id/bt_post_delayed"
        style="@style/Button"
        android:layout_above="@+id/bt_post"
        android:text="@string/post_delayed" />

    <Button
        android:id="@+id/bt_run_on_ui_thread"
        style="@style/Button"
        android:layout_above="@+id/bt_post_delayed"
        android:text="@string/run_on_ui_thread" />

</RelativeLayout>